--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -1,6 +1,7 @@
 ---
 km:
-  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
+  now:                                          "ឥឡូវ"
+  celebrating 50MM:                             "អប​អរសាទការ​តម្លើងកម្មវិធី 50លាន​ដង!"
   link:                                         "តំណ​ភ្ជាប់"
   site search:                                  "ស្វែង​រក​ YouVersion"
   auth error:                                   "សូម​ទោស​! មាន​បញ្ហា​ជាមួយ​ ឈ្មោះ​ប្រើ​ប្រាស់​ និង​ ពាក្យ​សម្ងាត់​របស់​លោក​អ្នក។ សូម​ចុះ​ឈ្មោះ​ចូល នោះ YouVersion នឹង​បន្ត"
@@ -129,6 +130,7 @@ km:
     unlike button text:                         "លែង​ចូល​ចិត្ត"
   notes:
     loading community:                          "កំពុង​ទាញ​យក​កំណត់​ត្រា​សហគមន៍"
+    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "សាធារណៈ"
     private:                                    "ឯកជន"
     draft:                                      "សេចក្ដី​ព្រាង"
@@ -325,11 +327,11 @@ km:
       limitation title:                         "ការ​កំណត់ នៃ​បំណុល"
       limitation text:                          "You expressly understand and agree that LifeChurch.tv and its subsidiaries, affiliates, officers, employees, agents, partners and licensors shall not be liable to you for any direct, indirect, incidental, special, consequential or exemplary damages, including, but not limited to, damages for loss of profits, goodwill, use, data or other intangible losses (even if LifeChurch.tv has been advised of the possibility of such damages), resulting from: %{item}(i) the use or the inability to use YouVersion; %{item}(ii) unauthorized access to or alteration of your transmissions or data; %{item}(iii) statements or conduct of any third party on YouVersion; or %{item}(iv) any other matter relating to YouVersion."
       exclusions title:                         "ឯកត្ត​ភាព និង​ការ​កំណត់"
-      exclusions text:                          "Some jurisdictions do not allow the exclusion of certain warranties or the limitation or exclusion of liability for incidental or consequential damages. Accordingly, some of the above limitations of sections 19 and 20 may not apply to you."
+      exclusions text:                          "មាន​និតិកម្ម​ខ្លះ​ដែល​មិន​អនុញ្ញាតិ​អោយ​ដក​ចេញ​នូវ​ការ​ធានារ ឬ​ការ​កំណត់​ណាមួយ ឬ​ការ​ដក​ចេញ​នូវកម្ម​សិទ្ធ​សំរាប់​ភាព​មិន​ចាំ​បាច់ ឬ​ការ​ខូច​ខាត​ដែល​កើត​មាន​ឡើង, មាន​ការ​កំណត់​មួយ​ចំនួន​ក្នុង​មាត្រា​ទី​ 19 និង 20 ដែល​មិន​ប៉ះ​ពាល់​ដល់​អ្នក​ឡើយ។"
       beneficiaries title:                      "​មិន​មាន​គុណ​ប្រយោជន៍​សំរាប់​ភាគីទី៣"
       beneficiaries text:                       "លោក​អ្នក​យល់​ស្រប​ ហើយ​ទទួល​ស្គាល់​ ក្នុង​ការ​ផ្ដល់​មក​កាន់ ច្បាប់​នៃ​ការ​ប្រើ​ប្រាស់, នឹង​មិន​មាន​គុណ​ប្រយោជន៌ដល់​ភាគី​ទី៣​នៅ​ក្នុង​កិច្ច​សន្យានេះ។"
       notice title:                             "កំណត់​ចំណាំ"
-      notice text:                              "LifeChurch.tv may provide you with notices, including those regarding changes to these TERMS OF USE, including but not limited to email, regular mail, SMS, MMS, text message, postings on YouVersion, or other reasonable means now known or hereinafter developed."
+      notice text:                              "LifeChurch.tv នឹង​ផ្ដល់​ដល់​អ្នក​អោយ​បាន​ដឹង​ រួម​ទាំង​ការ​ផ្លាស់​ប្ដូរ​នៃ​ច្បាប់​នៃ​ការ​ប្រើ​ប្រាស់ រួម​បញ្ចូល តែ​មិន​កំណត់​ទៅ​លើ​អ៊ី​ម៉ែល​, អ៊ី​ម៉ែល​ទូ​ទៅ, SMS, MMS, សារ​ជា​អក្សរ, ផ្សាយ​លើ YouVersion, ឬ​មធ្យោបាយ​ផ្សេង​​ទៀត​ដែល​ដឹង​ ឬ​កម្ម​វិធី​ឥឡូវ នឹង​បង្កើត​មក​ក្នុង​ពេល​ខាង​មុខ។"
       trademark title:                          "ព័ត៌មាន​ពី​និក្ខិត្ត​សញ្ញា"
       trademark text:                           "The logos, service marks, and product and service names related to LifeChurch.tv and its ministries are trademarks of LifeChurch.tv (the 'LifeChurch.tv Marks'). Without prior written permission from LifeChurch.tv, you agree not to display or use the LifeChurch.tv Marks in any manner."
       copyright title:                          "ទទួល​ស្គាល់​ហើយដំណើរ​ការ​ក្នុង​ការ​ប្រកាស​ពី​ការ​រក្សារសិទ្ធ ឬ​យល់​ដឹង​ពី​ការ​បំពាន​លើ​កម្ម​សិទ្ធ"
@@ -353,9 +355,9 @@ km:
       confirm password:                         "បញ្ជាក់​ពាក្យ​សម្ងាត់"
       avatar file:                              "ជ្រើស​រើស​ឯកសារ​សំរាប់​រូប​ភាព​របស់​អ្នក"
       avatar help:                              "រូបភាព​អាចមាន​ទំរង់​ជា​ JPG, PNG, ឬ GIF រូប​ភាព​របស់​អ្នក​ត្រូវ​​ប្ដូរទៅ​ជា 48x48។ ទំហំ​ឯកសារ​គឺ​១MB។"
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "សូម​ទោស, មាន​កំហុស​ពេល​បន្ទាន់​សម័យ​រូប​ភាព​របស់​អ្នក។"
+      picture_too_large:                        "រូប​ភាព​ត្រូវ​មាន​ទំហំ​តូច​ជាង1មេហ្កាបៃ"
+      picture_invalid_type:                     "រូប​ភាព​មាន​ទម្រង់​ជា JPG, PNG, ឬ GIF"
       updated picture:                          "ជោគ​ជ័យ! រូបភាព​របស់​លោក​អ្នក​ត្រូវ​បាន​បន្ទាន់​សម័យ"
       updated notifications:                    "ជោគ​ជ័យ! ការ​រៀប​ចំការ​ដាស់​តឿន​របស់​អ្នក​ត្រូវ​បាន​បន្ទាន់​សម័យ"
       notification errors:                      "មានកំហុស​(ច្រើន) ដែល​រារាំង​អ្នក​មិន​អោយ​បន្ទាន់​សម័យ​នូវ​ការ​តឿន​រំលឹក"
@@ -391,11 +393,11 @@ km:
     confirm delete:                             "បាទ/ចា៎ ខ្ញុំ​ច្បាស់​ហើយ"
     loading:                                    "កំពុង​ទាញ​យក​កំណត់​ចំណាំ​របស់​អ្នក"
     edit bookmark:                              "កែរ​កំណត់​ចំណាំ"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
-    update:                                     "Update"
-    color:                                      "Color:"
-    version field:                              "Version:"
+    reference:                                  "សេច​ក្ដីព្រាងៈ"
+    labels comma separated:                     "ផ្លាក (ផ្ដាច់​ដោយ​ប្រើ​សញ្ញា​ក្បៀស)"
+    update:                                     "បន្ទាន់​សម័យ"
+    color:                                      "ពណ៌ៈ"
+    version field:                              "ជំនាន់ៈ"
   badges:
     earned a badge:                             "ទទួល​បាន​ផ្លាកសញ្ញា"
     user badges:                                "ផ្លាក​សញ្ញា​របស់​ %{user}"
@@ -553,7 +555,9 @@ km:
     youversion copy:                            "វា​ចាប់​ផ្ដើម​តាំង​ពី​ឆ្នាំ​1996, គោល​បំណង​របស់ LifeChurch.tv​ គឺជួយ​ដឹកនាំ​មនុស្ស​អោយ​ដើរ​តាម​ព្រះយេស៊ូ​គ្រីស្ត​យ៉ាង​ពេញ​ទំហឹង។ ដើម្បី​ធ្វើ​បាន​ដូច្នេះ យើង​រក​មើល​នូវ​របៀប​ថ្មីៗ​ជាច្រើន​ក្នុង​ការ​ជួយ​មនុស្ស​អោយ​ផ្សារភ្ជាប់​ជាមួយ​នឹង​ព្រះគម្ពីរ​នៅ​ក្នុង​ជីវិតរស់​នៅ​ប្រចាំ​ថ្ងៃ​របស់​ពួក​គេ។ វិធីសាស្ត្រ​របស់​យើង​ត្រូវ​បាន​ផ្លាស់​ប្ដូរ​ជា​ច្រើន ហើយ​យើង​ធ្វើ​ការ​សហប្រតិបត្តិការណ៍​ជាមួយ​នឹង​ប្រពន្ធ័តិចណូឡូជី និង​យុត្តសាស្ត្រ​ជា​ច្រើន​ផង​ដែរ។ ប៉ុន្តែរឿង​ដែល​សំខាន់ គឺ​ការ​តាំងចិត្ត​របស់​យើង​នៅ​តែ​មាន​ដដែល ដោយ​យើង​បាន​ព្យាយាម​គ្រប់​យ៉ាង ហើយ​បង្រៀន​មនុស្ស​ពី​ព្រះ​បន្ទូល​របស់​ព្រះជាម្ចាស់ ដែល​ទាក់​ទង​ទៅ​នឹង​មនុស្ស ទោះ​គេ​នៅ​ទី​ណា​ក៏​ដោយ​ចុះ។"
     youversion copy 2:                          "YouVersion តំណាង​អោយព្រំ​ដែន​ថ្មី​នៅ​ក្នុងកិច្ច​ខំ​ប្រឹង​ប្រែង​របស់ LifeChurch.tv។ យើ​ង​មិន​គ្រាន់​តែ​កសាង​នូវ​ឧបករណ៍​ដែល​ប៉ះពាល់​ដល់​ពិភព​លោក​ ដោយ​ប្រើ​ប្រាស់​នូវ​ប្រពន្ធ័តិចណូឡូជី​ទេ ដែល​សំខាន់​ជាង​នោះ​គឺ​យើង​ចង់​ផ្សាភ្ជាប់​មនុស្ស​ទៅកាន់​ទំនាក់​ទំនង​ជាមួយ​នឹង​ព្រះ ក្នុង​កំឡុង​ពេល​ដែល​ពួក​គេ​ស្វែង​រក​ព្រះគម្ពីរ​ដែល​អាច​យល់​នៅ​ក្នុង​ជីវិត​របស់​ពួក​គេ។"
     partners title:                             "អរគុណ​ជាពិសេស​ដល់​ដៃគូររបស់​យើង"
+    partners text:                              "ជាមួយ​ក្រុម​ដៃ​គូរ​បោះ​ផ្សាយ​ព្រះ​គម្ពីរ​របស់​យើង, YouVersion នឹង​មិន​អាច​ផ្ដល់​ជូន​នូវ​ភាព​ទូលំទូលាយ​នៃ​សហគមន៍​ព្រះ​គម្ពីរ​ជា​ច្រើននោះ​ទេ។ លោក​អ្នក​ភាគ​ច្រើន​សួរ​ថា តើ​យើង​អាច​អរគុណ​ដល់​ក្រុម​អ្នក​ផ្គត់​ផ្គង់​ក៏​មាន​តម្លៃ​របស់បេសកកម្ម​ YouVersion ដោយ​របៀប​ណាទៅ។ លោក​អ្នក​អាច​រៀន​បាន​ច្រើន​ថែម​ទៀត​ពី​ពួក​គេ, ពន្ធ័កិច្ច​ពួក​គេ និង​របៀប​ដែល​អ្នក​អាច​គាំ​ទ្រ​ពួក​គេ​តាម​រយះ​តំណរ​ភ្ជាប់​ខាង​ក្រោម។"
     translation title:                          "ក្រុម​បក​ប្រែ​របស់​យើង"
+    learn more:                                 "រៀន​ថែម​ទៀត"
   press page:
     title:                                      "តំបន់សារព័ត៌មាន"
     contact header:                             "ព័ត៌មានទាក់ទងមក​កាន់​សារព័ត៌មាន"
@@ -563,12 +567,12 @@ km:
     blog:                                       "ប្លក់ YouVersion"
     facebook:                                   "YouVersion លើ​ហ្វេសប៊ុក"
     twitter:                                    "YouVersion លើ Twitter"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "ត្រូវ​ការ​ជំនួយ​ជាមួយ YouVersion?"
     lead copy:                                  "យោង​ទៅ​លើ​ ព្រះគម្ពីរ​លើ​ប្រពន្ធ័អ៊ីនធើណែត YouVersion.com​ ជា Bible App គឺ​ប្រើ​ដោយ​ឥត​គិត​ថ្លៃ​សំរាប់​ទូរសព្ទ័ចល័ត ដែល​អាច​បញ្ជូល​សឹង​តែ​គ្រប់​ប្រភេទ​ទូរសព្ទ័។ Bible App អនុញ្ញាតិ​អោយ​អ្នក​ប្រើ​ប្រាស់​​អាច​អាន​ព្រះ​គម្ពីរ, ចែក​រំលែក​ខ​ព្រះគម្ពីរ​ជាមួយ​បណ្ដាញ​សង្គម, កត់​ចំណាំ​នូវ​អត្ថបទ​ដែល​ពួក​គេ​ចូល​ចិត្ត ហើយអាច​ធ្វើ​ច្រើន​ទៀត &mdash; រាល់​ទម្រង់​ដែល​​ទូរសព្ទ័​ចល័ត​ចេះ​តែ​រីក​ចំរើន​ឡើង​ក្នុង​ជីវិត​មនុស្ស។"
     resources title:                            "ធនធាន​សារព័ត៌មាន"
     now title:                                  "ថ្ងៃ​នេះ​នៅ​សហគមន៍ YouVersion"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "ការ​មើល​ដោយ​ផ្ទាល់​កំពុង​ធ្វើ និង​មាន​ទិន្នន័យ​ចុង​ក្រោយ​បំផុត"
       about:                                    "អំពី YouVersion និង Bible App"
       history:                                  "ប្រវត្ត និង​ស្ថានភាព​របស់​ YouVersion"
       manual:                                   "សញ្ញា​នែណាំ YouVersion"
@@ -581,8 +585,8 @@ km:
       ipad:                                     "ការ​ប្រមូល​រូបភាពៈ IPad"
       android:                                  "ការ​ប្រមូល​រូបភាពៈ Android"
       blackberry:                               "ការ​ប្រមូល​រូបភាពៈ BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "ការ​ប្រមូល​រូបភាពៈ វីនដូវស៍ 7"
+      windows 8:                                "ការ​ប្រមូល​រូប​ភាពៈ វីនដូវស៍ 8"
       lifestyle:                                "ការ​ប្រមូល​រូបភាពៈ Lifestyle "
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Coverage Links"
