--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,6 @@
 ---
 es:
+  now:                                          "Ahora"
   celebrating 50MM:                             "¡Celebrando 50 millones de instalaciones!"
   link:                                         "Enlace"
   site search:                                  "Búsqueda de YouVersion"
@@ -129,6 +130,7 @@ es:
     unlike button text:                         "No Me Gusta"
   notes:
     loading community:                          "Cargando las notas de la comunidad..."
+    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "Público"
     private:                                    "Privado"
     draft:                                      "Borrador"
@@ -353,9 +355,9 @@ es:
       confirm password:                         "Confirmar Contraseña"
       avatar file:                              "Seleccione un archivo para su fotografía"
       avatar help:                              "Las imágenes pueden estar en formato JPG, PNG o GIF.  Su imagen será convertida a un tamaño de 48x48.  El tamaño máximo del archivo deberá de ser de 1Mb."
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "Perdón, se ha presentado un error al cargar su imagen."
+      picture_too_large:                        "La imagen debe ser menor de 1 megabyte."
+      picture_invalid_type:                     "Las imágenes deben ser en formato JPG, PNG o GIF"
       updated picture:                          "Usted ha actualizado su fotografia exitosamente!"
       updated notifications:                    "Usted ha actualizado la configuración de sus notificaciones exitosamente!"
       notification errors:                      "El ( los) siguiente (s) error (es) impidió la actualización de sus notificaciones:"
@@ -391,11 +393,11 @@ es:
     confirm delete:                             "Si, estoy seguro."
     loading:                                    "Cargando sus marcadores..."
     edit bookmark:                              "Editar Marcador"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "Referencia"
+    labels comma separated:                     "Etiquetas (separadas por comas):"
     update:                                     "Actualizar"
     color:                                      "Color:"
-    version field:                              "Version:"
+    version field:                              "Versión:"
   badges:
     earned a badge:                             "Una insignia ganada"
     user badges:                                "Insignias de %{user}"
@@ -456,7 +458,7 @@ es:
     privacy title:                              "Privacidad"
     stop reading:                               "Detener la lectura de este Plan"
     accountability:                             "Responsabilidad"
-    email reminder to me:                       "Enviar un recordatorio diario a mi correo electrónico (%{email_adress})"
+    email reminder to me:                       "Enviar un recordatorio diario a mi correo electrónico (%{email_address})"
     email weekly report to a friend:            "Enviar un reporte semanal a uno o más miembros de YouVersion"
     calendar:                                   "Calendario"
     search members placeholder:                 "Encontrar a un miembro de YouVersion"
@@ -553,7 +555,9 @@ es:
     youversion copy:                            "Desde su inicio en 1996,el propósito de LifeChurch.tv ha sido el de guiar a las personas a convertirse totalmente en seguidores devotos de Cristo. De este modo, hemos encontrado nuevas formas de ayudar a la gente a que sus vidas diarias sean conectadas con la Biblia. Nuestra metodología ha cambiado con el curso de los años, hemos incorporado diversas tecnologías y estrategias. Pero en el fondo, nuestro objetivo de relevancia se mantiene, mientras nosotros nos esforzamos constantemente para demostrar y enseñar a las personas como la Palabra de Dios se identifica con todos, sin importar dónde se encuentren en la vida."
     youversion copy 2:                          "YouVersion representa una nueva frontera en los esfuerzos de LifeChurch.tv. No sólo estamos construyendo una herramienta para impactar al mundo utilizando una innovadora tecnología, sino aún más importante, estamos involucrando a la gente a  tener una relación con Dios a medida que descubren la importancia que la Biblia tiene para sus vidas."
     partners title:                             "Un Agradecimiento Especial a Nuestros Socios."
+    partners text:                              "Sin nuestros generosos editores de la Biblia asociados, YouVersion simplemente no podría ser capaz de proveer a nuestra comunidad mundial tantas Biblias. Muchos de ustedes han preguntado cómo pueden agradecerles a estos partidarios vitales de la misión de YouVersion. Pueden aprender más acerca de ellos, sus ministerios, y formas en las que se les puede apoyar a través de los enlaces abajo."
     translation title:                          "Nuestros Equipos de Traducción"
+    learn more:                                 "Aprenda más"
   press page:
     title:                                      "Área de Prensa"
     contact header:                             "Información del Contacto de Medios de Comunicación"
@@ -563,12 +567,12 @@ es:
     blog:                                       "Blog de YouVersion"
     facebook:                                   "YouVersion en Facebook"
     twitter:                                    "YouVersion en Twitter"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "¿Necesita ayuda con YouVersion?"
     lead copy:                                  "Basado en la Biblia en línea, YouVersion.com, la Biblia App es una Biblia móvil gratuita, que se puede instalar en casi cualquier teléfono. La Bibila App le permite a los usuarios leer la Biblia, compartir versículos con sus redes sociales, marcar sus pasajes favoritos, y más, todo en un formato que se mantiene al día con su creciente estilo de vida móvil."
     resources title:                            "Recursos para los Medios de Comunicación"
     now title:                                  "Hoy en la Comunidad de YouVersion"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "Un vistazo en vivo al compromiso y la ultima información "
       about:                                    "Acerca de YouVersion y  la Biblia App"
       history:                                  "Historia y Estadísticas de YouVersion"
       manual:                                   "Manual de la Marca YouVersion"
@@ -581,8 +585,8 @@ es:
       ipad:                                     "Colección de imágenes: iPad"
       android:                                  "Colección de imágenes: Android"
       blackberry:                               "Colección de imágenes: BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "Colección de imágenes: Windows Phone 7"
+      windows 8:                                "Colección de imágenes: Windows 8"
       lifestyle:                                "Colección de imágenes: Lifestyle"
       screencast:                               "Grabaciones de YouVersion"
     links title:                                "Enlaces de Cobertura Medios de Comunicación"
