--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,5 +1,6 @@
 ---
 ko:
+  now:                                          "지금"
   celebrating 50MM:                             "축 5천만째 설치!"
   link:                                         "링크"
   site search:                                  "유버전 검색"
@@ -129,6 +130,7 @@ ko:
     unlike button text:                         "좋아요 취소"
   notes:
     loading community:                          "공동체 노트 로딩중 ..."
+    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "공개"
     private:                                    "비공개"
     draft:                                      "임시저장"
@@ -354,9 +356,9 @@ ko:
       confirm password:                         "새 비밀번호 확인"
       avatar file:                              "사진 파일을 골라주세요"
       avatar help:                              "JPG, PNG 혹은 GIF 파일을 사용하실 수 있습니다. 48 x 48 크기로 변환됩니다. 최대 메가 바이트의 파일을 올릴 수 있습니다."
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "죄송합니다.  사진 업데이트중 오류가 발생했습니다."
+      picture_too_large:                        "사진의 크기는 1 메가바이트 미만이여야합니다."
+      picture_invalid_type:                     "사진은  JPG, PNG, 혹은 GIF 포맷이라야 합니다."
       updated picture:                          "사진이 변경되었습니다!"
       updated notifications:                    "알림 설정이 변경되었습니다!"
       notification errors:                      "아래 오류로 인해 알림 설정을 변경하지 못했습니다."
@@ -392,11 +394,11 @@ ko:
     confirm delete:                             "예, 확실합니다."
     loading:                                    "책갈피 가져오는 중..."
     edit bookmark:                              "책갈피 편집"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "참조:"
+    labels comma separated:                     "라벨 (컴마로 구분):"
     update:                                     "업데이트"
-    color:                                      "Color:"
-    version field:                              "Version:"
+    color:                                      "색깔:"
+    version field:                              "번역본:"
   badges:
     earned a badge:                             "배지 획득"
     user badges:                                "%{user}님의 배지"
@@ -554,7 +556,9 @@ ko:
     youversion copy:                            "1996년 LifeChurch.tv 교회 창립 때부터, 본 교회의 목적은 사람들을 전적으로 그리스도를 따르는 헌신된 자들로 인도하는 것이었습니다.   이 목적을 달성하는 과제 중 하나는 성경 말씀을 모든 분들의 일상의 삶속으로 연결하는 것이었습니다.  여러가지의 기술과 전략을 도입해서 시도하는 과정중에서 많은 새로운 시도들이 있었습니다.  하지만 하나님의 말씀이 모든 이의 일상생활에 실체적 연관을 짓게할 수있도록 최선을 다하자하는 그 중심 전략은 바뀌지 않았습니다."
     youversion copy 2:                          "유버전은 LifeChurch.tv의 수고 가운데 보여진 새로운 최전방입니다. 유버전은 단지 혁신기술을 사용하여 세상에 충젹을 주기위한 도구를 만드는 것이 아니라, 그보다 더 중요한 것은, 성경이 가진 우리들의 삶과 관계가 있다는 것을 발견하게 함으로써, 더 많은 사람들이 하나님과 관계를 맺을 수 있도록 하는 것입니다."
     partners title:                             "여러 파트너들께 특별한 감사를 드립니다."
+    partners text:                              "성경 출판 협력체의 도움 없이는 전 세계적으로 이렇게 많은 번역본을 제공할 수가 없습니다.  많은 분들께서 유버전 사역을 적극적으로 후원하는 협력체에 감사를 표시할 방법을 물어오셨습니다.  아래의 링크를 통해서 이들 협력체, 사역및  나아가 동참할 방법들을 더 자세히  알 수있습니다"
     translation title:                          "유버전 번역팀"
+    learn more:                                 "더 알아보기"
   press page:
     title:                                      "관련 기사"
     contact header:                             "기사 자료 문의"
@@ -564,12 +568,12 @@ ko:
     blog:                                       "유버전 블로그"
     facebook:                                   "유버전 페이스북"
     twitter:                                    "유버전 트위터"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "YouVersion 사용에 도움이 필요합니까?"
     lead copy:                                  "온라인 성경을 기초로 한 YouVersion.com과 성경앱은 거의 모든 종류의 스마트폰에 설치가 가능한 무료 모바일 성경입니다. 성경앱은 성경을 읽고 소셜네트워크를 통하여 말씀을 공유할 수 있으며, 좋아하는 구절들을 책갈피 해 둘 수 있는 등 모바일 라이프스타일의 증가에 발맞춘 형태로 사용자에게 제공하고 있습니다."
     resources title:                            "기사 자료"
     now title:                                  "유버전 공동체의 오늘"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "참여행사및 최근 자료 실시간 보기"
       about:                                    "유버전과 성경앱 소개"
       history:                                  "유번전의 역사와 통계자료"
       manual:                                   "유버전 상표 설명서"
@@ -582,8 +586,8 @@ ko:
       ipad:                                     "이미지 모음: 아이패드"
       android:                                  "이미지 모음: 안드로이드"
       blackberry:                               "이미지 모음: 블랙베리"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "이미지 모음: Windows Phone 7"
+      windows 8:                                "이미지 모음: Windows 8"
       lifestyle:                                "이미지 모음: 라이프스타일"
       screencast:                               "유버전 스크린캐스트"
     links title:                                "관련 미디어 링크"
