--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,6 @@
 ---
 ru:
+  now:                                          "Сейчас"
   celebrating 50MM:                             "Отмечаем 50 миллионов установок!"
   link:                                         "Ссылка"
   site search:                                  "Поиск YouVersion"
@@ -129,6 +130,7 @@ ru:
     unlike button text:                         "Не нравится"
   notes:
     loading community:                          "Загружаю заметки сообщества..."
+    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "Публичная"
     private:                                    "Личная"
     draft:                                      "Черновик"
@@ -393,7 +395,7 @@ ru:
     edit bookmark:                              "Редактировать закладку"
     reference:                                  "Ссылка:"
     labels comma separated:                     "Ярлыки (через запятую):"
-    update:                                     "Обновить"
+    update:                                     "Сохранить"
     color:                                      "Цвет:"
     version field:                              "Перевод "
   badges:
@@ -553,7 +555,9 @@ ru:
     youversion copy:                            "С момента создания LifeChurch.tv в 1996 году, нашей целью было направлять людей на путь верных последователей Христа. При этом мы искали новые пути, с помощью которых люди могли бы связать Библию со своей повседневной жизнью. Наши методы изменились за эти годы, поскольку мы внедрили различные технологии и стратегии. Но в своей основе, фокус остался на важности, и мы последовательно стремимся продемонстрировать и научить людей тому, как Слово Божие касается каждого, независимо от того, кем они являются в жизни."
     youversion copy 2:                          "YouVersion представляет новый рубеж в усилиях LifeChurch.tv. Мы не просто создаем инструмент для воздействия на мир, используя инновационные технологии, но, что более важно, мы приводим людей к Богу, поскольку они начинают осознавать актуальность Библии в своей жизни."
     partners title:                             "Выражаем особую благодарность нашим партнёрам"
+    partners text:                              "Без поддержки наших щедрых партнеров – издателей Библии, YouVersion просто не смог бы обеспечить мировое сообщество таким разнообразным списком переводов Писания. Многие из вас интересовались тем, как можно отблагодарить сторонников миссии YouVersion. Получить больше иноформации о них, их служении и о том, как поддержать их служение, вы сможете по следующим ссылкам."
     translation title:                          "Наши команды переводчиков"
+    learn more:                                 "Далее..."
   press page:
     title:                                      "Уголок прессы"
     contact header:                             "Контакты для прессы"
