--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -1,5 +1,6 @@
 ---
 sk:
+  now:                                          "Teraz"
   celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Odkaz"
   site search:                                  "YouVersion vyhľadávanie"
@@ -129,6 +130,7 @@ sk:
     unlike button text:                         "Už sa mi to nepáči"
   notes:
     loading community:                          "Načítavajú sa komunitné poznámky..."
+    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "Verejná"
     private:                                    "Súkromná"
     draft:                                      "Návrh"
@@ -318,7 +320,7 @@ sk:
       termination text:                         "You agree that LifeChurch.tv may, under certain circumstances and without prior notice, at its sole discretion, immediately terminate your LifeChurch.tv account and access to YouVersion at any time and for any reason, and shall not be liable to you or any third party for any termination of your account or access to YouVersion."
       dealings title:                           "Dealings with Third Parties"
       dealings text:                            "You acknowledge that your dealings with, any parties met or found on or through YouVersion are solely between you and such party. You agree that LifeChurch.tv shall not be responsible or liable for any loss or damage of any sort incurred as the result of any such dealings."
-      links title:                              "Links"
+      links title:                              "Linky"
       links text:                               "YouVersion may provide, or third parties may provide, links to other World Wide Web sites or resources. You acknowledge and agree that LifeChurch.tv has no control over,is not responsible for the availability of, and does not endorse and is not responsible or liable for, any Content, advertising, products or other materials on or available from such sites or resources. You acknowledge and agree that LifeChurch.tv is not responsible in any way for any damage or loss caused by or in connection with use of or reliance on any such site or resource."
       rights title:                             "LifeChurch.tv's Proprietary Rights"
       rights text:                              "You acknowledge and agree that YouVersion contains proprietary and confidential information that is protected by copyrights, trademarks, service marks, patents, intellectual property laws, or other proprietary rights and laws. Except as expressly permitted by applicable law or authorized by LifeChurch.tv, you agree not to modify, rent, lease, loan, sell, distribute or create derivative works based on YouVersion, in whole or in part."
@@ -535,9 +537,9 @@ sk:
     donate now button:                          "Prispejte teraz"
     email header:                               "YouVersion, patriace pod LifeChurch.tv, obdržalo váš príspevok. Nebol zaňho poskytnutý žiadny tovar, okrem nehmotných duchovných dobier. Ak máte akékoľvek otázky, kontaktujte prosím giving@lifechurch.tv."
     email footer:                               "Váš príspevok pomôže ľuďom z celého sveta zamilovať sa do Božieho Slova."
-    address:                                    "Address"
-    city:                                       "City"
-    state:                                      "State"
+    address:                                    "Adresa"
+    city:                                       "Mesto"
+    state:                                      "Stav"
     zip:                                        "Zip"
   download ad:
     title:                                      "Stiahnite si bezplatnú aplikáciu Biblia"
@@ -553,7 +555,9 @@ sk:
     youversion copy:                            "Od svojho vzniku v roku 1996 bolo cieľom LifeChurch.tv viesť ľudí k tomu, aby sa stali oddanými nasledovníkmi Krista. Počas toho sme hľadali nové spôsoby, ako pomôcť ľuďom vniesť Bibliu do ich každodenného života. Naše metódy sa v priebehu rokov menili. Postupne sme skúšali rôzne stratégie a technológie, ale v hĺbke zostalo naše zameranie stále na význame Božieho Slova, ktorý sa ľuďom snažíme ukázať a naučiť ich, že sa týka každého, bez rozdielu kde sa v svojom živote nachádzajú."
     youversion copy 2:                          "YouVersion predstavuje novú oblasť v snahách LifeChurch.tv. Nevytvárame nástroj, vďaka ktorému by sme chceli použitím inovatívnych technológií získať vplyv. Predovšetkým sme ľudia zapálení pre vzťah s Bohom, ktorí objavujú dôležitosť Biblie na životy nás všetkých."
     partners title:                             "Špeciálne poďakovanie našim partnerom"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Naše tímy prekladateľov"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Tlačové informácie"
     contact header:                             "Kontaktné informácie pre tlač"
