--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1,5 +1,6 @@
 ---
 zh-TW:
+  now:                                          "現在"
   celebrating 50MM:                             "慶祝5000萬次的安裝！"
   link:                                         "鏈結"
   site search:                                  "YouVersion 搜尋"
@@ -21,8 +22,8 @@ zh-TW:
   share error:                                  "抱歉，信息分享出錯。請重試。"
   error following user:                         "抱歉，在關注此用戶時發生錯誤。"
   error unfollowing user:                       "抱歉，在取消關注此用戶時發生錯誤。"
-  google plus:                                  "Google+"
-  connect to:                                   "連接至您的 %{connection} 帳戶"
+  google plus:                                  "Google +"
+  connect to:                                   "連接至您的 %{connection} 帳號"
   connected as user:                            "您已與 %{connection} 上的 %{username} 帳號連接。"
   deleted connection:                           "已成功地移除與 %{connection} 服務的連接。"
   deleted connection error:                     "抱歉，在移除與 %{connection} 服務的連接時發生錯誤。"
@@ -56,7 +57,7 @@ zh-TW:
   link will be added:                           "將被加入"
   my picture:                                   "更新我的圖片"
   my notifications:                             "管理訊息通知"
-  my connections:                               "已連接的帳戶"
+  my connections:                               "已連接的帳號"
   my devices:                                   "已連接的設備"
   language name:                                "繁體中文"
   sign in:                                      "Sign in"
@@ -129,6 +130,7 @@ zh-TW:
     unlike button text:                         "不喜歡"
   notes:
     loading community:                          "正在加載社群筆記..."
+    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     public:                                     "公開"
     private:                                    "不公開"
     draft:                                      "草稿"
@@ -353,9 +355,9 @@ zh-TW:
       confirm password:                         "確認密碼"
       avatar file:                              "選擇一個檔案照片作為您的圖片"
       avatar help:                              "圖片可以是JPG，PNG，或GIF格式。您的圖片會轉換成48x48的縮圖。圖片的檔案大小最多1MB。"
-      picture error:                            "Sorry, there was an error updating your picture."
-      picture_too_large:                        "Picture should be less than 1 megabyte"
-      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
+      picture error:                            "抱歉， 更新您的圖片時出錯。"
+      picture_too_large:                        "圖片應小於1MB"
+      picture_invalid_type:                     "圖片格式應為 JPG、PNG 或 GIF"
       updated picture:                          "成功了！您已經更新了您的圖片。"
       updated notifications:                    "成功了！您已經更新了您的通知設定。"
       notification errors:                      "以下的錯誤使您無法更新通知："
@@ -391,11 +393,11 @@ zh-TW:
     confirm delete:                             "是的，我確定"
     loading:                                    "正在下載您的書籤..."
     edit bookmark:                              "編輯書籤"
-    reference:                                  "Reference:"
-    labels comma separated:                     "Labels (comma-separated):"
+    reference:                                  "參考經文："
+    labels comma separated:                     "標籤 (以逗號分隔)："
     update:                                     "更新"
-    color:                                      "Color:"
-    version field:                              "Version:"
+    color:                                      "色彩:"
+    version field:                              "版本："
   badges:
     earned a badge:                             "贏得了一個徽章"
     user badges:                                "%{user}的徽章"
@@ -403,7 +405,7 @@ zh-TW:
     title:                                      "讀經計劃"
     browse by category:                         "分目錄瀏覽"
     browse plans:                               "瀏覽%{category}計劃"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    swap list localization:                     "(<a href='%{swap_link}'>以 %{swap_locale} 檢視</a>)"
     showing language filtered:                  "只顯現 %{lang_name}的讀經計劃。"
     all:                                        "所有"
     all plans:                                  "所有的計劃"
@@ -553,7 +555,9 @@ zh-TW:
     youversion copy:                            "自 1996年 創立以來，LifeChurch.tv 的使命就是帶領人們成為基督的虔誠跟隨者。在這過程中，我們已經尋求新的方法來幫助人們把聖經連接到他們的日常生活裡。多年來我們的方法也因為納入多種不同的技術和策略而有所改變。但在事工的核心，我們的重點仍然是持續努力地展示和教導人們上帝的話語如何與每個人有關，不管他們處於生命的任何一個階段。"
     youversion copy 2:                          "YouVersion 在 LifeChurch.tv 的事工裡代表着一個新的領域。我們不只是利用創新的技術建立一個工具來影響世界，更重要的是，當人們發現聖經在他們生命裡的重要性時，我們也幫助人們進入與上帝的關係。"
     partners title:                             "特別感謝我們的合作夥伴"
+    partners text:                              "如果沒有我們慷慨的聖經出版社夥伴， YouVersion根本沒有能力給全世界的社群提供這麼多的聖經版本。許多用戶曾問過該如何感謝這些YouVersion使命的重要支持者。您可以透過以下的鏈結來暸解他們與他們的事工、以及您可以幫助他們的方法。"
     translation title:                          "我們的翻譯團隊"
+    learn more:                                 "暸解更多"
   press page:
     title:                                      "新聞區"
     contact header:                             "新聞聯絡資訊"
@@ -563,12 +567,12 @@ zh-TW:
     blog:                                       "YouVersion 的部落格"
     facebook:                                   "Facebook 上的 YouVersion"
     twitter:                                    "Twitter 上的 YouVersion"
-    support:                                    "Need help with YouVersion?"
+    support:                                    "需要幫助使用 YouVersion ?"
     lead copy:                                  "基於 YouVersion.com 的線上聖經，聖經軟體是一個幾乎任何手機都可以安裝的免費行動聖經。聖經軟體讓使用者閱讀聖經、在社交網路上分享經節、添加書籤在他們喜愛的經文裡，還有更多 —— 全都在一個能夠配合他們越來越行動化生活方式的格式裡。"
     resources title:                            "新聞資源"
     now title:                                  "今日的 YouVersion 社群"
     resources:
-      now:                                      "A live look at engagement and the latest data"
+      now:                                      "現場查看參與情況和最新數據"
       about:                                    "關於YouVersion和聖經軟體"
       history:                                  "YouVersion歷史和統計"
       manual:                                   "YouVersion 品牌手冊"
@@ -581,8 +585,8 @@ zh-TW:
       ipad:                                     "圖片集：iPad"
       android:                                  "圖片集：Android"
       blackberry:                               "圖片集：黑莓機"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      win phone 7:                              "影像集合: Windows Phone 7"
+      windows 8:                                "影像集合: Windows 8"
       lifestyle:                                "圖片集：生活方式"
       screencast:                               "YouVersion 螢幕截圖"
     links title:                                "媒體報導鏈結"
