--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -175,8 +175,8 @@ de:
     invalid chapter title:                      "Über diese Version"
     invalid chapter text:                       "Dieses Kapitel gibt es nicht in dieser Version."
     invalid secondary chapter text:             "Dieses Kapitel existiert in deiner gewählten zweiten Version nicht."
-    no secondary version title:                 "About Parallel Comparison"
-    no secondary version text:                  "%{language_name} only has one version available, so we couldn't pick a secondary version for you. Please select your secondary version for parallel comparison."
+    no secondary version title:                 "Über die Option \"Paralleles Lesen\" "
+    no secondary version text:                  "Für %{language_name} ist nur eine Version verfügbar, so dass wir keine zweite Version für dich auswählen konnten. Bitte wähle selbst eine andere Version für das parallele Lesen aus."
     select another chapter:                     "Wähle ein anderes Kapitel"
     view in reader:                             "Lies %{reference} in der Leseansicht"
   users:
@@ -239,10 +239,10 @@ de:
     confirm update email success:               "Danke! Du hast deine E-Mail-Ad­res­se aktualisiert."
     confirm update email error:                 "Sorry, es gab ein Problem beim Ändern deiner E-Mail-Ad­res­se."
     account confirmed:                          "Dein Konto ist nun aktiviert."
-    account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
-    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
-    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
-    confirm password to continue:               "Please enter your password to sign in and get started."
+    account already confirmed:                  "Dein Konto ist bereits bestätigt worden. Bitte melde dich an, um weiter zu machen. "
+    errors confirming account:                  "Sorry, bei uns ist etwas schief gelaufen. Aktualisiere deinen Browser. Falls es wieder auftritt, klicke bitte unten, um eine neue E-Mail zur Bestätigung anzufordern. "
+    invalid confirm hash:                       "Sorry, der Code für die Bestägigung scheint ungültig zu sein. Aktualisiere bitte deinen Browser, um es erneut zu versuchen. Falls es wieder passieren sollte, klicke bitte unten, um einen neuen Code anzufordern."
+    confirm password to continue:               "Bitte gib dein Passwort ein, um dich anzumelden, und fang an."
     invalid email forgot:                       "Sorry, wir haben kein Konto mit dieser E-Mail-Ad­res­se gefunden. Bitte versuch es noch einmal."
     error deleting account:                     "Entschuldige, es gab ein Problem auf unserer Seite. Bitte versuche es erneut oder kontaktiere den Support."
     send new password button:                   "Sende neues Passwort"
@@ -373,7 +373,7 @@ de:
       newsletter:                               "Informiert mich über YouVersion-Ankündigungen."
       note_like:                                "Benachrichtigt mich, wenn jemandem meine Notizen gefallen."
       reading_plans:                            "Benachrichtigt mich in Bezug auf von mir abonnierte Lesepläne."
-      publishing partners:                      "Keep me updated on news from YouVersion's content partners."
+      publishing partners:                      "Sendet mir bitte Nachrichten über den Inhalt von Partnern von YouVersion."
       update:                                   "Benachrichtigungen aktualisieren"
   bookmarks:
     edit:                                       "Bearbeiten"
@@ -537,10 +537,10 @@ de:
     donate now button:                          "Jetzt spenden"
     email header:                               "YouVersion, ein Dienst von LifeChurch.tv, hat deine Spende erhalten. Als Gegenleistung für diese Spende wurden, abgesehen vom immateriellen, religiösen Nutzen, keine Waren oder Dienstleistungen ausgetauscht. Bei Fragen kannst du dich an giving@lifechurch.tv wenden."
     email footer:                               "Deine Spende wird Menschen auf der ganzen Welt helfen, sich in das Wort Gottes zu verlieben.  "
-    address:                                    "Address"
-    city:                                       "City"
-    state:                                      "State"
-    zip:                                        "Zip"
+    address:                                    "Adresse"
+    city:                                       "Stadt"
+    state:                                      "Bundesland"
+    zip:                                        "PLZ"
   download ad:
     title:                                      "Lade dir die gratis Bibel App herunter"
     line 1:                                     "Hunderte Versionen in vielen"
@@ -557,7 +557,7 @@ de:
     partners title:                             "Ein besonderes Dankeschön an unsere Partner"
     partners text:                              "Ohne unsere großzügigen Partner bei den Herausgebern der Bibeln könnte YouVersion der weltweiten Gemeinschaft nicht so viele Bibeln zur Verfügung stellen. Viele von euch haben gefragt, wie ihr denen, die die Mission von YouVersion derart unterstützen, helfen könnt. Ihr könnt mehr über sie und ihren Dienst erfahren und sie jederzeit über die unten genannten Links unterstützen. "
     translation title:                          "Unsere Übersetzerteams"
-    learn more:                                 "Mehr erfahren..."
+    learn more:                                 "Mehr erfahren"
   press page:
     title:                                      "Presseecke"
     contact header:                             "Kontaktinformation Presse"
